# QScientific

./: CMakeLists.txt  QDoubleSlider.cpp  QDoubleSlider.h  QDualValue.cpp  QDualValue.h  QExploratorySlider.cpp  QExploratorySlider.h  QNonlinearSlider.cpp  QNonlinearSlider.h  QPowerSlider.cpp  QPowerSlider.h  QScientificConfig.cmake.in  QScientificSpinBox.cpp  QScientificSpinBox.h  README.md  UseQScientific.cmake.in
App/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  QScientificTest.cpp
